# hfmcp

./: .gitignore  pyproject.toml
src/hfmcp/: __init__.py
